--- a/TSAHandset/TSAHandset.csproj
+++ b/TSAHandset/TSAHandset.csproj
@@ -199,8 +199,26 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704280559385_InitialCreate.cs" />
+    <Compile Include="Migrations\201704280559385_InitialCreate.Designer.cs">
+      <DependentUpon>201704280559385_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704290657580_initialModel.cs" />
+    <Compile Include="Migrations\201704290657580_initialModel.Designer.cs">
+      <DependentUpon>201704290657580_initialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704290726239_addedPlansTable.cs" />
+    <Compile Include="Migrations\201704290726239_addedPlansTable.Designer.cs">
+      <DependentUpon>201704290726239_addedPlansTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704290727456_seedingPlans.cs" />
+    <Compile Include="Migrations\201704290727456_seedingPlans.Designer.cs">
+      <DependentUpon>201704290727456_seedingPlans.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdalTokenCache.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -264,6 +282,20 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704280559385_InitialCreate.resx">
+      <DependentUpon>201704280559385_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704290657580_initialModel.resx">
+      <DependentUpon>201704290657580_initialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704290726239_addedPlansTable.resx">
+      <DependentUpon>201704290726239_addedPlansTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704290727456_seedingPlans.resx">
+      <DependentUpon>201704290727456_seedingPlans.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
