--- a/TSAHandset/TSAHandset.csproj
+++ b/TSAHandset/TSAHandset.csproj
@@ -215,9 +215,18 @@
     <Compile Include="Migrations\201704290727456_seedingPlans.Designer.cs">
       <DependentUpon>201704290727456_seedingPlans.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704291334548_addedHandsetModel.cs" />
+    <Compile Include="Migrations\201704291334548_addedHandsetModel.Designer.cs">
+      <DependentUpon>201704291334548_addedHandsetModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704291336089_seedingHandsets.cs" />
+    <Compile Include="Migrations\201704291336089_seedingHandsets.Designer.cs">
+      <DependentUpon>201704291336089_seedingHandsets.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdalTokenCache.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Handset.cs" />
     <Compile Include="Models\Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -295,6 +304,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704290727456_seedingPlans.resx">
       <DependentUpon>201704290727456_seedingPlans.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704291334548_addedHandsetModel.resx">
+      <DependentUpon>201704291334548_addedHandsetModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704291336089_seedingHandsets.resx">
+      <DependentUpon>201704291336089_seedingHandsets.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
