--- a/TSAHandset/TSAHandset.csproj
+++ b/TSAHandset/TSAHandset.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Models\RequestType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\HomeViewModel.cs" />
     <Compile Include="ViewModel\RequestFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -300,6 +301,7 @@
     <Content Include="Views\UserProfile\Relogin.cshtml" />
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Views\Request\New.cshtml" />
+    <Content Include="Views\Home\AdminIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
