--- a/TSAHandset/TSAHandset.csproj
+++ b/TSAHandset/TSAHandset.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Models\RequestType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
     <Compile Include="ViewModel\RequestFormViewModel.cs" />
   </ItemGroup>
@@ -487,6 +488,7 @@
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Views\Request\New.cshtml" />
     <Content Include="Views\Home\AdminIndex.cshtml" />
+    <Content Include="Views\Shared\_Sidebar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
